# da-run

./: Cargo.toml  README.md  SKILL.md  example-feature-spec.md  example-spec-prompt.md
.github/workflows/: ci.yml
algorithm/: CLAUDE.md  flow.ron
algorithm/references/: architecture.md
algorithm/stages/01-design/: CONTEXT.md
algorithm/stages/03-implement/: CONTEXT.md
algorithm/stages/04-verify/: CONTEXT.md  default-gate.sh
bins/da-state/: Cargo.toml
bins/da-state/src/: cli.rs  exec.rs  lib.rs  main.rs  pretty.rs  selftest.rs
bins/da-state/tests/: cli_exec.rs  selftest_ladder.rs
crates/adapter-fs/: Cargo.toml
crates/adapter-fs/src/: events.rs  flow_ron.rs  fs_snapshot.rs  gate_report.rs  lib.rs  read.rs  run_artifacts.rs  run_edn.rs  run_json.rs  steer_file.rs  worktree_patch.rs
crates/adapter-fs/tests/: artifact_roundtrip.rs  events_journal.rs  snapshot_integration.rs
crates/adapter-restate/: Cargo.toml
crates/adapter-restate/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: check_dispatch.rs  lib.rs  mirror.rs  status.rs
crates/app/tests/: use_cases.rs
crates/domain/: Cargo.toml  clippy.toml
crates/domain/src/: anomaly.rs  derive.rs  dispatch.rs  facts.rs  flow.rs  lib.rs  phase.rs  refusal.rs  run_state.rs  stage.rs  transition.rs  verdict.rs  warning.rs  worktree.rs
crates/domain/tests/: derive_properties.rs  flow_validation.rs  run_id.rs  scenarios.rs  transition_properties.rs
crates/domain/tests/common/: mod.rs
crates/ports/: Cargo.toml
crates/ports/src/: artifact.rs  lib.rs  run_mirror.rs  snapshot.rs
crates/wire/: Cargo.toml
crates/wire/src/: artifact.rs  check.rs  derived.rs  flow.rs  lib.rs  status.rs
crates/wire/tests/: wire_shapes.rs
crates/wire/tests/snapshots/: wire_shapes__check_allowed_shape_is_pinned.snap  wire_shapes__check_refused_gate_shape_is_pinned.snap  wire_shapes__check_refused_steer_shape_is_pinned.snap  wire_shapes__derived_wire_shape_is_pinned.snap  wire_shapes__run_snapshot_wire_shape_is_pinned.snap
docs/decisions/: 0001-content-fingerprinted-steer-keys.md  0002-record-snapshot-protocol.md  0003-run-manifest-json.md  0004-check-journaling.md
docs/field-reports/: 0001-first-operator-run.md
docs/open-questions/: README.md  artifact-encoding.md  commit-record-trust.md  flow-content-in-engine.md  partial-holistic-verdict.md  publish-atomicity.md  run-branch-transport.md
engine/fixtures/: minimal-flow.ron
engine/gate/: dispatch.sh
engine/workflows/: da-arm-pre.js  da-post-gate.js  da-stage.js
flows/rust-factory/: CLAUDE.md  CONTEXT.md  flow.ron
flows/rust-factory/references/: rust-standards.md  steering.md  testing.md
infra/systemd/: README.md  da-steer.service
services/da-steer/: README.md  package-lock.json  package.json  tsconfig.json
services/da-steer/src/: index.ts  logic.test.ts  logic.ts
workflows/: da-arm-pre.js  da-post-gate.js  da-stage.js
(+6 files in other folders)
