[package]
name = "da-adapter-restate"
version.workspace = true
edition.workspace = true
description = "Ring 3: publishes the run mirror to the DaRun Restate object via curl"

[dependencies]
da-domain = { workspace = true }
da-ports = { workspace = true }
da-wire = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
