[package]
name = "da-wire"
version.workspace = true
edition.workspace = true
description = "Published language: versioned JSON shapes for the CLI and the mirror"

[dependencies]
da-domain = { workspace = true }
da-app = { workspace = true }
da-ports = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
